[gd_scene load_steps=6 format=3 uid="uid://42g6ywiq2ehk"]

[ext_resource type="Script" path="res://Quests/PlantingTrees/PlantingTrees.gd" id="1_dui0w"]
[ext_resource type="TileSet" uid="uid://cryiq527h0mb2" path="res://Art/Map.tres" id="2_polwg"]
[ext_resource type="PackedScene" uid="uid://da7ayqbdsbs7j" path="res://Scenes/UI/UI.tscn" id="3_3qw3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3fyn"]
size = Vector2(16, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwwl3"]
size = Vector2(16, 27)

[node name="PlantingTrees" type="Node2D"]
script = ExtResource("1_dui0w")
quest_id = 7
trees_to_plant = 10

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_polwg")
format = 2
layer_0/name = "BaseGround"
layer_0/tile_data = PackedInt32Array(-327690, 327680, 51, -262154, 327680, 51, -196618, 327680, 51, -131082, 327680, 51, -65546, 327680, 51, -10, 327680, 51, 65526, 327680, 51, 131062, 327680, 51, 196598, 327680, 51, 262134, 327680, 51, 327670, 327680, 51, 393206, 327680, 51, -327689, 327680, 51, -262153, 327680, 51, -196617, 327680, 51, -131081, 327680, 51, -65545, 327680, 51, -9, 327680, 51, 65527, 327680, 51, 131063, 327680, 51, 196599, 327680, 51, 262135, 327680, 51, 327671, 327680, 51, 393207, 327680, 51, -327688, 327680, 51, -262152, 327680, 51, -196616, 327680, 51, -131080, 327680, 51, -65544, 327680, 51, -8, 327680, 51, 65528, 327680, 51, 131064, 327680, 51, 196600, 327680, 51, 262136, 327680, 51, 327672, 327680, 51, 393208, 327680, 51, -327687, 327680, 51, -262151, 327680, 51, -196615, 327680, 51, -131079, 327680, 51, -65543, 327680, 51, -7, 327680, 51, 65529, 327680, 51, 131065, 327680, 51, 196601, 327680, 51, 262137, 327680, 51, 327673, 327680, 51, 393209, 327680, 51, -327686, 327680, 51, -262150, 327680, 51, -196614, 327680, 51, -131078, 327680, 51, -65542, 327680, 51, -6, 327680, 51, 65530, 327680, 51, 131066, 327680, 51, 196602, 327680, 51, 262138, 327680, 51, 327674, 327680, 51, 393210, 327680, 51, -327685, 327680, 51, -262149, 327680, 51, -196613, 327680, 51, -131077, 327680, 51, -65541, 327680, 51, -5, 327680, 51, 65531, 327680, 51, 131067, 327680, 51, 196603, 327680, 51, 262139, 327680, 51, 327675, 327680, 51, 393211, 327680, 51, -327684, 327680, 51, -262148, 327680, 51, -196612, 327680, 51, -131076, 327680, 51, -65540, 327680, 51, -4, 327680, 51, 65532, 327680, 51, 131068, 327680, 51, 196604, 327680, 51, 262140, 327680, 51, 327676, 327680, 51, 393212, 327680, 51, -327683, 327680, 51, -262147, 327680, 51, -196611, 327680, 51, -131075, 327680, 51, -65539, 327680, 51, -3, 327680, 51, 65533, 327680, 51, 131069, 327680, 51, 196605, 327680, 51, 262141, 327680, 51, 327677, 327680, 51, 393213, 327680, 51, -327682, 327680, 51, -262146, 327680, 51, -196610, 327680, 51, -131074, 327680, 51, -65538, 327680, 51, -2, 327680, 51, 65534, 327680, 51, 131070, 327680, 51, 196606, 327680, 51, 262142, 327680, 51, 327678, 327680, 51, 393214, 327680, 51, -327681, 327680, 51, -262145, 327680, 51, -196609, 327680, 51, -131073, 327680, 51, -65537, 327680, 51, -1, 327680, 51, 65535, 327680, 51, 131071, 327680, 51, 196607, 327680, 51, 262143, 327680, 51, 327679, 327680, 51, 393215, 327680, 51, -393216, 327680, 51, -327680, 327680, 51, -262144, 327680, 51, -196608, 327680, 51, -131072, 327680, 51, -65536, 327680, 51, 0, 327680, 51, 65536, 327680, 51, 131072, 327680, 51, 196608, 327680, 51, 262144, 327680, 51, 327680, 327680, 51, -393215, 327680, 51, -327679, 327680, 51, -262143, 327680, 51, -196607, 327680, 51, -131071, 327680, 51, -65535, 327680, 51, 1, 327680, 51, 65537, 327680, 51, 131073, 327680, 51, 196609, 327680, 51, 262145, 327680, 51, 327681, 327680, 51, -393214, 327680, 51, -327678, 327680, 51, -262142, 327680, 51, -196606, 327680, 51, -131070, 327680, 51, -65534, 327680, 51, 2, 327680, 51, 65538, 327680, 51, 131074, 327680, 51, 196610, 327680, 51, 262146, 327680, 51, 327682, 327680, 51, -393213, 327680, 51, -327677, 327680, 51, -262141, 327680, 51, -196605, 327680, 51, -131069, 327680, 51, -65533, 327680, 51, 3, 327680, 51, 65539, 327680, 51, 131075, 327680, 51, 196611, 327680, 51, 262147, 327680, 51, 327683, 327680, 51, -393212, 327680, 51, -327676, 327680, 51, -262140, 327680, 51, -196604, 327680, 51, -131068, 327680, 51, -65532, 327680, 51, 4, 327680, 51, 65540, 327680, 51, 131076, 327680, 51, 196612, 327680, 51, 262148, 327680, 51, 327684, 327680, 51, -393211, 327680, 51, -327675, 327680, 51, -262139, 327680, 51, -196603, 327680, 51, -131067, 327680, 51, -65531, 327680, 51, 5, 327680, 51, 65541, 327680, 51, 131077, 327680, 51, 196613, 327680, 51, 262149, 327680, 51, 327685, 327680, 51, -393210, 327680, 51, -327674, 327680, 51, -262138, 327680, 51, -196602, 327680, 51, -131066, 327680, 51, -65530, 327680, 51, 6, 327680, 51, 65542, 327680, 51, 131078, 327680, 51, 196614, 327680, 51, 262150, 327680, 51, 327686, 327680, 51, -393209, 327680, 51, -327673, 327680, 51, -262137, 327680, 51, -196601, 327680, 51, -131065, 327680, 51, -65529, 327680, 51, 7, 327680, 51, 65543, 327680, 51, 131079, 327680, 51, 196615, 327680, 51, 262151, 327680, 51, 327687, 327680, 51, -393208, 327680, 51, -327672, 327680, 51, -262136, 327680, 51, -196600, 327680, 51, -131064, 327680, 51, -65528, 327680, 51, 8, 327680, 51, 65544, 327680, 51, 131080, 327680, 51, 196616, 327680, 51, 262152, 327680, 51, 327688, 327680, 51)
layer_1/name = "Addons"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-65543, 1376256, 48, -196614, 327680, 53, 393210, 1376256, 49, -196613, 1376256, 49, 65531, 1376256, 49, -262147, 1376256, 48, 65533, 393216, 53, 262141, 1376256, 48, -327682, 1376256, 49, 327679, 1376256, 48, -327679, 1376256, 50, -196604, 262144, 53, -262139, 1376256, 48, 5, 1376256, 49, 327685, 1376256, 50, -393210, 1376256, 50, 327686, 1376256, 48, -65529, 1376256, 48, 7, 1376256, 50, -196600, 1376256, 49, 65544, 1376256, 49, -262152, 1310720, 50, -131079, 262144, 53, 131065, 1310720, 50, -65542, 327680, 54, 327674, 1310720, 49, 196603, 327680, 53, 393213, 262144, 53, -65537, 393216, 53, -131072, 1310720, 50, 327681, 1310720, 49, -196606, 1310720, 49, 65538, 327680, 53, 327682, 327680, 53, -262140, 262144, 53, -327675, 1310720, 49, -327673, 1310720, 50, 262151, 327680, 54, 131080, 262144, 53, 262135, 327680, 53, 262136, 393216, 53, -196617, 327680, 53, -131081, 1310720, 48, -65545, 327680, 53, 131072, 327680, 53, 196610, 1310720, 49, 196611, 262144, 53, 196613, 327680, 54, -131070, 1310720, 50, -65534, 327680, 53, -262143, 327680, 53, -3, 327680, 53, -2, 393216, 53, -131075, 393216, 54)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Trees" type="Node2D" parent="."]

[node name="Tree1" type="TileMap" parent="Trees"]
position = Vector2(-179, -10)
tile_set = ExtResource("2_polwg")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 1572864, 33, -1, 1572864, 32)

[node name="tree1_area" type="Area2D" parent="Trees/Tree1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trees/Tree1/tree1_area"]
position = Vector2(-8, 1)
shape = SubResource("RectangleShape2D_w3fyn")

[node name="Tree2" type="TileMap" parent="Trees"]
position = Vector2(-178, 29)
tile_set = ExtResource("2_polwg")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 1703936, 33, -1, 1703936, 32)

[node name="tree2_area" type="Area2D" parent="Trees/Tree2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trees/Tree2/tree2_area"]
position = Vector2(-8, 2.5)
shape = SubResource("RectangleShape2D_xwwl3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("3_3qw3j")]
mouse_filter = 1
show_only_time = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="mouse_entered" from="Trees/Tree1/tree1_area" to="." method="_on_tree_1_area_mouse_entered"]
[connection signal="mouse_exited" from="Trees/Tree1/tree1_area" to="." method="_on_tree_1_area_mouse_exited"]
[connection signal="mouse_entered" from="Trees/Tree2/tree2_area" to="." method="_on_tree_2_area_mouse_entered"]
[connection signal="mouse_exited" from="Trees/Tree2/tree2_area" to="." method="_on_tree_2_area_mouse_exited"]
